--- a/backend/backend.env
+++ b/backend/backend.env
@@ -1,12 +1,23 @@
 # Railway Production Environment Configuration
 ENVIRONMENT=production
-DEBUG=false
+DEBUG=true
 
-# Database - Railway will automatically provide DATABASE_URL
-# DATABASE_URL will be set by Railway PostgreSQL service
+# Database
+DATABASE_URL=postgresql://synthos:securepassword123@localhost:5432/synthos_db
 
-# Redis - Railway will automatically provide REDIS_URL  
-# REDIS_URL will be set by Railway Redis service
+# Redis
+AWS_ELASTICACHE_ENDPOINT=synthos-33lvyw.serverless.use1.cache.amazonaws.com:
+AWS_ELASTICACHE_PORT=6379
+AWS_ELASTICACHE_USE_TLS=true
+CACHE_BACKEND=auto
+
+# AWS RDS Endpoint 
+AWS_RDS_ENDPOINT=synthos.cqnoi6g24lpg.us-east-1.rds.amazonaws.com
+AWS_RDS_PORT=5432
+AWS_RDS_DATABASE=synthos
+AWS_RDS_USERNAME=genovo
+AWS_RDS_USE_SSL=true
+
 
 # Celery Configuration (uses Railway Redis)
 # CELERY_BROKER_URL will use Railway Redis
@@ -46,9 +57,17 @@ ALLOWED_HOSTS=*
 # API Configuration
 API_V1_STR=/api/v1
 
-# Application Limits
+# AWS (for file storage)
+AWS_ACCESS_KEY_ID=AKIA2FMTH3NWTGQXI6CA
+AWS_SECRET_ACCESS_KEY=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
+AWS_S3_BUCKET=synthos-dev
+
+
+
+# Limits
 FREE_TIER_MONTHLY_LIMIT=10000
 MAX_SYNTHETIC_ROWS=5000000
+
 
 # Pricing Tiers (JSON format for backend processing)
 PRICING_TIERS='{"starter": {"price": 99, "stripe_price_id": "price_starter_monthly", "paddle_product_id": "pro_01jzp36tyrsdg91hprxx47zhwb"}, "professional": {"price": 599, "stripe_price_id": "price_professional_monthly", "paddle_product_id": "pro_01jzp3ds3cj4y0x9y53ftcmmkk"}, "growth": {"price": 1299, "stripe_price_id": "price_growth_monthly", "paddle_product_id": "pro_01jzp3gcsceh34w3jvyyn68rhr"}}'
