Update README for AWS App Runner deployment, enhance backend environment configuration for AWS services, and modify Dockerfile for App Runner compatibility

--- a/backend/backend.env
+++ b/backend/backend.env
@@ -2,14 +2,17 @@
 ENVIRONMENT=production
 DEBUG=true
 
-# Database
-DATABASE_URL=postgresql://synthos:securepassword123@localhost:5432/synthos_db
+# Database - AWS RDS 
+DATABASE_URL=ppostgresql://genovo:TGU<5<v1o8-Z~::v:9$V-UNwg~V0@synthos.cqnoi6g24lpg.us-east-1.rds.amazonaws.com:5432/synthos
 
-# Redis
+# Redis - AWS ElastiCache
+REDIS_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
+CACHE_BACKEND=redis
+CACHE_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
+# Legacy format (keep for compatibility)
 AWS_ELASTICACHE_ENDPOINT=synthos-33lvyw.serverless.use1.cache.amazonaws.com:
 AWS_ELASTICACHE_PORT=6379
 AWS_ELASTICACHE_USE_TLS=true
-CACHE_BACKEND=auto
 
 # AWS RDS Endpoint 
 AWS_RDS_ENDPOINT=synthos.cqnoi6g24lpg.us-east-1.rds.amazonaws.com
@@ -48,11 +51,17 @@ STRIPE_SECRET_KEY=your_stripe_secret_key_here
 
 # File Storage - Railway's filesystem for MVP (migrate to Cloudflare R2 later)
 UPLOAD_PATH=/app/uploads
+
+# CORS Configuration for Vercel frontend
+CORS_ORIGINS=https://synthos.dev,https://synthos-dev.vercel.app
+ALLOWED_HOSTS=*
+
+# App Runner Configuration
+PORT=8000
+HOST=0.0.0.0
 EXPORT_PATH=/app/exports
 
-# CORS Configuration - Update with your Vercel domain
-CORS_ORIGINS=https://your-vercel-app.vercel.app,http://localhost:3000
-ALLOWED_HOSTS=*
+
 
 # API Configuration
 API_V1_STR=/api/v1
@@ -67,6 +76,14 @@ AWS_S3_BUCKET=synthos-dev
 # Limits
 FREE_TIER_MONTHLY_LIMIT=10000
 MAX_SYNTHETIC_ROWS=5000000
+
+# CORS Configuration for Vercel frontend
+CORS_ORIGINS=https://synthos.dev,https://synthos-dev.vercel.app,http://localhost:3000
+ALLOWED_HOSTS=*
+
+# App Runner Configuration  
+PORT=8000
+HOST=0.0.0.0
 
 
 # Pricing Tiers (JSON format for backend processing)
