--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -72,8 +72,8 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
 # Expose port
 EXPOSE 8000
 
-# Default command
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
+# Default command (App Runner compatible)
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 2"]
 
 # =============================================================================
 # DEVELOPMENT STAGE (optional)
