Fix DATABASE_URL format in backend environment configuration for correct PostgreSQL connection

--- a/backend/backend.env
+++ b/backend/backend.env
@@ -3,7 +3,7 @@ ENVIRONMENT=production
 DEBUG=true
 
 # Database - AWS RDS 
-DATABASE_URL=ppostgresql://genovo:TGU<5<v1o8-Z~::v:9$V-UNwg~V0@synthos.cqnoi6g24lpg.us-east-1.rds.amazonaws.com:5432/synthos
+DATABASE_URL=postgresql://genovo:TGU<5<v1o8-Z~::v:9$V-UNwg~V0@synthos.cqnoi6g24lpg.us-east-1.rds.amazonaws.com:5432/synthos
 
 # Redis - AWS ElastiCache
 REDIS_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
