🔧 Update backend environment configuration and dependencies
✅ Fixed AWS_ELASTICACHE_ENDPOINT format in backend.env for compatibility
✅ Updated python-json-logger version in requirements.txt for improved logging
✅ Enhanced cache URL retrieval logic in config.py to support explicit CACHE_URL
✅ Simplified middleware HTTPS settings in main.py
✅ Updated regex to pattern in user preferences schema for better validation
✅ Changed frontend API and WebSocket URLs to production endpoints in frontend.env

These changes improve configuration consistency and enhance application behavior.

--- a/backend/backend.env
+++ b/backend/backend.env
@@ -10,7 +10,7 @@ REDIS_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
 CACHE_BACKEND=redis
 CACHE_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
 # Legacy format (keep for compatibility)
-AWS_ELASTICACHE_ENDPOINT=synthos-33lvyw.serverless.use1.cache.amazonaws.com:
+AWS_ELASTICACHE_ENDPOINT=synthos-33lvyw.serverless.use1.cache.amazonaws.com
 AWS_ELASTICACHE_PORT=6379
 AWS_ELASTICACHE_USE_TLS=true
 
