--- a/frontend/frontend.env
+++ b/frontend/frontend.env
@@ -16,10 +16,10 @@ NEXT_PUBLIC_APP_NAME=Synthos
 # ===================================================================
 # Backend API URL - REQUIRED
 # Development: http://localhost:8000
-# Production: https://api.yourdomain.com
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Production: https://8idywcvtpy.us-east-1.awsapprunner.com/
+NEXT_PUBLIC_API_URL=https://8idywcvtpy.us-east-1.awsapprunner.com/
 # WebSocket URL for real-time features
-NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
+NEXT_PUBLIC_WS_URL=ws:https://8idywcvtpy.us-east-1.awsapprunner.com/ws
 # ===================================================================
 # ENVIRONMENT SETTINGS
 # ===================================================================
