--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,10 @@
   "name": "synthos-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -27,13 +31,13 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.6",
-    "framer-motion": "^10.16.5",
-    "lucide-react": "^0.292.0",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.445.0",
     "next": "^15.3.5",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
@@ -45,11 +49,11 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "^15.3.5",
     "jest": "^29.0.0",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
