🔧 Update AWS App Runner YAML configuration
✅ Reverted field names from `pre_build` to `pre-build` and `post_build` to `post-build` to align with AWS requirements.
✅ Added `typescript` as a dependency in `frontend/package.json` for improved type support.

These changes ensure compliance with AWS App Runner specifications and enhance the frontend's type safety.

--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -2,7 +2,7 @@ version: 1.0
 runtime: python3
 build:
   commands:
-    pre_build:  # Changed from pre-build to pre_build
+    pre-build:
       - echo "=== PRE-BUILD PHASE ==="
       - echo "AWS App Runner - Python 3.8 Environment"
       - python3 --version
@@ -15,7 +15,7 @@ build:
       - pip install --no-cache-dir --timeout=300 -r requirements.txt
       - echo "Verifying critical imports..."
       - python3 -c "import fastapi; import uvicorn; import sqlalchemy; print('Core dependencies verified')"
-    post_build:  # Changed from post-build to post_build
+    post-build:
       - echo "=== POST-BUILD PHASE ==="
       - echo "Setting up application structure..."
       - mkdir -p /app/uploads
