--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "@react-three/fiber": "^8.17.10",
     "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
+    "@types/node": "^20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/three": "^0.160.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
@@ -42,18 +45,15 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.1"
+    "three": "^0.160.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "^15.3.5",
-    "jest": "^29.0.0",
-    "typescript": "^5.3.3"
+    "jest": "^29.0.0"
   }
 }
