🗑️ Remove AWS App Runner Compatibility Reference Document
✅ Deleted the `APP_RUNNER_COMPATIBILITY.md` file as it is no longer needed.
✅ Cleaned up the `requirements.txt` by adding extra newlines for better readability.
✅ Updated `tsconfig.json` to remove unnecessary type definitions for improved clarity.

These changes streamline the project structure and enhance file organization.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -44,8 +44,7 @@
     },
     "types": [
       "jest",
-      "node",
-      "@testing-library/jest-dom"
+      "node"
     ],
     "target": "ES2017"
   },
