--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,8 +52,10 @@
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.0",
     "eslint": "^8",
     "eslint-config-next": "^15.3.5",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0"
   }
 }
