--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,81 +3,98 @@
 # Python 3.8 Compatible - Production Ready
 # =============================================================================
 
-# Core FastAPI Framework
-fastapi>=0.104.1,<0.105.0
-uvicorn[standard]>=0.24.0,<0.25.0
-pydantic>=2.5.0,<3.0.0
-pydantic[email]>=2.5.0,<3.0.0
+# Core FastAPI Framework (ESSENTIAL - Install first)
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.2
+pydantic[email]==2.5.2
 
-# Database & ORM
-sqlalchemy>=2.0.23,<2.1.0
-psycopg2-binary>=2.9.9,<3.0.0
-alembic>=1.13.1,<2.0.0
-asyncpg>=0.29.0,<0.30.0
+# Database & ORM (ESSENTIAL)
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+alembic==1.13.1
+asyncpg==0.29.0
 
-# Authentication & Security
-passlib[bcrypt]>=1.7.4,<2.0.0
-PyJWT>=2.8.0,<3.0.0
-python-jose[cryptography]>=3.3.0,<4.0.0
-python-multipart>=0.0.6,<1.0.0
-itsdangerous>=2.1.2,<3.0.0
-slowapi>=0.1.9,<1.0.0
+# Authentication & Security (ESSENTIAL)
+passlib[bcrypt]==1.7.4
+PyJWT==2.8.0
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+itsdangerous==2.1.2
+slowapi==0.1.9
 
-# Email & Templates
-email-validator>=2.1.0,<3.0.0
-jinja2>=3.1.2,<4.0.0
+# Email & Templates (ESSENTIAL)
+email-validator==2.1.0.post1
+jinja2==3.1.3
 
-# Redis & Caching
-redis>=5.0.1,<6.0.0
-aioredis>=2.0.1,<3.0.0
+# Redis & Caching (ESSENTIAL)
+redis==5.0.1
+aioredis==2.0.1
 
-# Background Tasks
-celery>=5.3.4,<6.0.0
+# Background Tasks (ESSENTIAL)
+celery==5.3.4
 
-# AWS Services
-boto3>=1.34.0,<2.0.0
-botocore>=1.34.0,<2.0.0
+# AWS Services (ESSENTIAL)
+boto3==1.34.34
+botocore==1.34.34
 
-# AI/ML APIs
-anthropic>=0.7.8,<1.0.0
-openai>=1.6.1,<2.0.0
+# AI/ML APIs (ESSENTIAL)
+anthropic==0.8.1
+openai==1.12.0
 
-# Monitoring & Logging
-sentry-sdk[fastapi]>=1.39.2,<2.0.0
-structlog>=23.2.0,<24.0.0
-python-json-logger>=3.0.0,<5.0.0
+# Monitoring & Logging (ESSENTIAL)
+sentry-sdk[fastapi]==1.40.6
+structlog==23.2.0
+python-json-logger==3.1.0
 
-# Payment Processing
-stripe>=7.9.0,<8.0.0
+# Payment Processing (ESSENTIAL)
+stripe==7.12.0
 
-# Data Processing (Core only)
-pandas>=2.1.4,<3.0.0
-numpy>=1.25.2,<2.0.0
+# Data Processing (CORE ONLY - LIGHTWEIGHT)
+pandas==2.1.4
+numpy==1.25.2
 
-# File Handling
-aiofiles>=24.1.0,<25.0.0
-openpyxl>=3.1.2,<4.0.0
+# File Handling (ESSENTIAL)
+aiofiles==24.1.0
+openpyxl==3.1.2
 
-# HTTP Clients
-httpx>=0.25.2,<1.0.0
-requests>=2.31.0,<3.0.0
+# HTTP Clients (ESSENTIAL)
+httpx==0.26.0
+requests==2.31.0
 
-# Environment & Configuration
-python-decouple>=3.8,<4.0.0
-python-dotenv>=1.0.0,<2.0.0
+# Environment & Configuration (ESSENTIAL)
+python-decouple==3.8
+python-dotenv==1.0.1
 
-# Time Handling
-pytz>=2024.1
+# Time Handling (ESSENTIAL)
+pytz==2024.1
 
-# System Monitoring
-psutil>=5.9.8,<6.0.0
+# System Monitoring (ESSENTIAL)
+psutil==5.9.8
 
-# AI/ML Core (Lightweight for production)
-torch>=2.1.0,<3.0.0
-transformers>=4.35.0,<5.0.0
-scikit-learn>=1.3.0,<2.0.0
+# Data Validation (ESSENTIAL)
+marshmallow==3.20.2
 
-# Data Validation
-marshmallow>=3.20.1,<4.0.0 
+# =============================================================================
+# AI/ML DEPENDENCIES (OPTIONAL - INSTALL ONLY IF NEEDED)
+# These packages are large and may cause build timeouts
+# They will be installed with best effort, failures are acceptable
+# =============================================================================
+
+# Uncomment these lines only if AI/ML features are required:
+# torch==2.1.2+cpu --find-links https://download.pytorch.org/whl/torch_stable.html
+# transformers==4.37.2
+# scikit-learn==1.3.2
+
+# =============================================================================
+# LIGHTWEIGHT ALTERNATIVES (OPTIONAL)
+# These provide similar functionality with smaller footprint
+# =============================================================================
+
+# For basic ML tasks without PyTorch:
+# scikit-learn==1.3.2
+
+# For text processing without transformers:
+# nltk==3.8.1 
 
 
