--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,14 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-three/drei": "^9.88.17",
-    "@react-three/fiber": "^8.17.10",
+    "@react-three/drei": "9.88.13",
+    "@react-three/fiber": "8.16.8",
     "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.160.0",
+    "@types/three": "^0.158.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -39,13 +39,13 @@
     "next": "^15.3.5",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.1",
+    "three": "0.158.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -57,5 +57,15 @@
     "eslint-config-next": "^15.3.5",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0"
+  },
+  "resolutions": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
+  },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
