--- a/backend/backend.env
+++ b/backend/backend.env
@@ -88,3 +88,8 @@ HOST=0.0.0.0
 
 # Pricing Tiers (JSON format for backend processing)
 PRICING_TIERS='{"starter": {"price": 99, "stripe_price_id": "price_starter_monthly", "paddle_product_id": "pro_01jzp36tyrsdg91hprxx47zhwb"}, "professional": {"price": 599, "stripe_price_id": "price_professional_monthly", "paddle_product_id": "pro_01jzp3ds3cj4y0x9y53ftcmmkk"}, "growth": {"price": 1299, "stripe_price_id": "price_growth_monthly", "paddle_product_id": "pro_01jzp3gcsceh34w3jvyyn68rhr"}}'
+
+# RDS Proxy Configuration
+RDS_PROXY_ENDPOINT=synthos-rds-proxy.proxy-cqnoi6g24lpg.us-east-1.rds.amazonaws.com
+USE_RDS_PROXY=true
+USE_IAM_AUTH=false
