--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -12,6 +12,10 @@ services:
           ls -l
           echo "[PRE_BUILD] Python version:"
           python --version
+          if [ ! -f requirements.txt ]; then
+            echo "[PRE_BUILD] ERROR: requirements.txt not found!" && exit 1
+          fi
+          echo "[PRE_BUILD] requirements.txt found."
         build_command: |
           echo "[BUILD] Upgrading pip..."
           pip install --upgrade pip
