--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -5,11 +5,11 @@ build:
     pre-build:
       - echo "[PRE_BUILD] Working directory: $(pwd)"
       - echo "[PRE_BUILD] Listing files:"
-      - ls -l
+      - ls -la
       - echo "[PRE_BUILD] Python version:"
       - python --version
-      - if [ ! -f requirements.txt ]; then echo "[PRE_BUILD] ERROR: requirements.txt not found!" && exit 1; fi
-      - echo "[PRE_BUILD] requirements.txt found."
+      - echo "[PRE_BUILD] Checking for requirements.txt:"
+      - ls -la requirements.txt || echo "[PRE_BUILD] requirements.txt not found"
     build:
       - echo "[BUILD] Upgrading pip..."
       - pip install --upgrade pip
