--- a/frontend/frontend.env
+++ b/frontend/frontend.env
@@ -17,9 +17,9 @@ NEXT_PUBLIC_APP_NAME=Synthos
 # Backend API URL - REQUIRED
 # Development: http://localhost:8000
 # Production: https://8idywcvtpy.us-east-1.awsapprunner.com/
-NEXT_PUBLIC_API_URL=https://8idywcvtpy.us-east-1.awsapprunner.com/
+NEXT_PUBLIC_API_URL=http://localhost:8000
 # WebSocket URL for real-time features
-NEXT_PUBLIC_WS_URL=ws:https://8idywcvtpy.us-east-1.awsapprunner.com/ws
+NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
 # ===================================================================
 # ENVIRONMENT SETTINGS
 # ===================================================================
