--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node .next/standalone/server.js",
     "lint": "next lint",
     "test": "jest",
     "test:e2e": "playwright test",
@@ -20,8 +20,8 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-three/drei": "9.88.13",
-    "@react-three/fiber": "8.16.8",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18.2.47",
@@ -38,13 +38,13 @@
     "next": "^15.3.5",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "0.158.0",
+    "three": "^0.160.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -56,5 +56,9 @@
     "eslint-config-next": "^15.3.5",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
