--- a/backend/backend.env
+++ b/backend/backend.env
@@ -5,11 +5,16 @@ DEBUG=true
 # Database - AWS RDS 
 DATABASE_URL=postgresql://genovo:genovo2025@18.235.10.180:5432/synthos?sslmode=require
 
-# Redis - AWS ElastiCache
-REDIS_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
-CACHE_BACKEND=redis
-CACHE_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379
-# Legacy format (keep for compatibility)
+# Valkey - AWS ElastiCache (Valkey 8.1)
+# Primary Valkey configuration
+VALKEY_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379/0
+CACHE_BACKEND=valkey
+CACHE_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379/0
+
+# Legacy Redis URL (for compatibility, but Valkey takes precedence)
+REDIS_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379/0
+
+# AWS ElastiCache Configuration (Valkey)
 AWS_ELASTICACHE_ENDPOINT=synthos-33lvyw.serverless.use1.cache.amazonaws.com
 AWS_ELASTICACHE_PORT=6379
 AWS_ELASTICACHE_USE_TLS=true
@@ -21,10 +26,9 @@ AWS_RDS_DATABASE=synthos
 AWS_RDS_USERNAME=genovo
 AWS_RDS_USE_SSL=true
 
-
-# Celery Configuration (uses Railway Redis)
-# CELERY_BROKER_URL will use Railway Redis
-# CELERY_RESULT_BACKEND will use Railway Redis
+# Celery Configuration (uses Valkey)
+CELERY_BROKER_URL=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379/1
+CELERY_RESULT_BACKEND=rediss://synthos-33lvyw.serverless.use1.cache.amazonaws.com:6379/2
 
 # Security - Production-grade secrets
 SECRET_KEY=IqFjQQ6X1BK8dsjQiWczLp1lDxB6OMHPNsUv7FogQTY
@@ -36,7 +40,6 @@ PADDLE_VENDOR_AUTH_CODE=your-vendor-auth-code
 PADDLE_PUBLIC_KEY=pdl_sdbx_apikey_01jzp3tskdwzpasb56pxfjy5wc_WjyxfT2Q32Jzp0hAQv4YQt_AKv
 PADDLE_WEBHOOK_SECRET=your-webhook-secret
 PADDLE_ENVIRONMENT=production
-
 
 # Payment Provider Configuration
 PRIMARY_PAYMENT_PROVIDER=paddle
@@ -61,8 +64,6 @@ PORT=8000
 HOST=0.0.0.0
 EXPORT_PATH=/app/exports
 
-
-
 # API Configuration
 API_V1_STR=/api/v1
 
@@ -70,8 +71,6 @@ API_V1_STR=/api/v1
 AWS_ACCESS_KEY_ID=AKIA2FMTH3NWTGQXI6CA
 AWS_SECRET_ACCESS_KEY=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
 AWS_S3_BUCKET=synthos-dev
-
-
 
 # Limits
 FREE_TIER_MONTHLY_LIMIT=10000
@@ -85,7 +84,6 @@ ALLOWED_HOSTS=*
 PORT=8000
 HOST=0.0.0.0
 
-
 # Pricing Tiers (JSON format for backend processing)
 PRICING_TIERS='{"starter": {"price": 99, "stripe_price_id": "price_starter_monthly", "paddle_product_id": "pro_01jzp36tyrsdg91hprxx47zhwb"}, "professional": {"price": 599, "stripe_price_id": "price_professional_monthly", "paddle_product_id": "pro_01jzp3ds3cj4y0x9y53ftcmmkk"}, "growth": {"price": 1299, "stripe_price_id": "price_growth_monthly", "paddle_product_id": "pro_01jzp3gcsceh34w3jvyyn68rhr"}}'
 
@@ -95,5 +93,5 @@ USE_RDS_PROXY=false
 USE_IAM_AUTH=false
 AWS_RDS_PASSWORD=genovo2025
 
-# TEMPORARY: Disable Redis for development
-# REDIS_DISABLED=true  # Commented out
+# Valkey is enabled (not disabled)
+# REDIS_DISABLED=false  # Explicitly enabled for Valkey
