🔧 Update CI/CD workflow and frontend configuration for improved performance and testing
✅ Upgraded GitHub Actions cache and artifact upload actions to version 4 for better performance. Modified environment setup scripts to use specific `.env` files for backend and frontend. Enhanced `next.config.js` with Docker optimization settings, security headers, and improved bundle size optimization. Added comprehensive load testing script to assess API performance and error rates, ensuring robust application behavior under load.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "start": "node .next/standalone/server.js",
     "lint": "next lint",
     "test": "jest",
+    "test:ci": "jest --ci --coverage --watchAll=false",
     "test:e2e": "playwright test",
     "test:watch": "jest --watch",
+    "type-check": "tsc --noEmit",
     "security:audit": "npm audit",
     "security:check": "npm audit --audit-level high"
   },
